--- a/Assignment1_of_Python.ipynb
+++ b/Assignment1_of_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvFVQgSTfLjk+kMGep9mMU",
+      "authorship_tag": "ABX9TyMX4P2qg/9igoT2tERYZWpp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Althaf0097/Demo/blob/main/Assignment1_of_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Python pratical Question 1"
+      ],
+      "metadata": {
+        "id": "jyZu0EUblNys"
+      }
     },
     {
       "cell_type": "markdown",
@@ -452,13 +461,66 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Python Pratical Question 2"
+      ],
+      "metadata": {
+        "id": "WdE224LXl4iR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Write a Python program to accept a string value from the user and display\n",
+        "the count of each character in that string. Sample input: Enter a string\n",
+        "value: assembly Sample output: a=1, s=2, e=1, m=1, b=1, l=1, y=1"
+      ],
+      "metadata": {
+        "id": "gCtTOBtVmPmm"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "string = input(\"Enter a string value: \")\n",
+        "count = {}\n",
+        "\n",
+        "for char in string:\n",
+        "    if char in count:\n",
+        "        count[char] += 1\n",
+        "    else:\n",
+        "        count[char] = 1\n",
+        "\n",
+        "output = ', '.join([f\"{char}={count[char]}\" for char in count])\n",
+        "\n",
+        "print(output)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "74sfJCgehgIt",
+        "outputId": "dfe3f8af-f698-4ff0-ffaa-19d4e6b9fdc4"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string value: assamply\n",
+            "a=2, s=2, m=1, p=1, l=1, y=1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "74sfJCgehgIt"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Q9q5RI5pnbjz"
+      }
     }
   ]
 }
