--- a/Assignment1_of_Python.ipynb
+++ b/Assignment1_of_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMX4P2qg/9igoT2tERYZWpp",
+      "authorship_tag": "ABX9TyMVdsAOc8KpBiBA0RO2Urm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,10 +517,380 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "2. . Write a Python function to find the maximum of three numbers Sample\n",
+        "input: 34,12,7 Sample output: 34"
+      ],
       "metadata": {
         "id": "Q9q5RI5pnbjz"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def max_number(a,b,c):\n",
+        "    return max(a,b,c)\n",
+        "\n",
+        "max_number(34,12,7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PLMckqZOn33O",
+        "outputId": "8090e0f9-547e-40ef-cb57-9abe7c5c2c68"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "34"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Write a Python function called exponent(base,exp) that returns an\n",
+        "integer value of base raises to the power of exp. Sample input: Enter the\n",
+        "base: 2 Enter the exponent: 3 Sample output: 8"
+      ],
+      "metadata": {
+        "id": "ivd_fYuJoErU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base = int(input(\"Enter the base: \"))\n",
+        "exp = int(input(\"Enter the exponent: \"))\n",
+        "\n",
+        "result = base ** exp\n",
+        "\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1lSX9vpjoAWK",
+        "outputId": "0380deae-625a-4e2f-ed61-dfe9628e55ac"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the base: 2\n",
+            "Enter the exponent: 3\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Write a Python function that takes a positive integer and returns the sum\n",
+        "of the cube of all the positive integers smaller than the specified number.\n",
+        "Sample input: 4 Sample output: 36.\n"
+      ],
+      "metadata": {
+        "id": "4Djs7Bl6oV7B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter the number: \"))\n",
+        "sum = 0\n",
+        "for i in range(1,num):\n",
+        "    sum += i**3\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7fNyehBoZdC",
+        "outputId": "2df66135-c1ea-41af-a3b8-2e69e33e32e3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 4\n",
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Write a Python program which iterates from 1 to 10. For multiples of 2,\n",
+        "print “Fizz” instead of the number and for the multiples of 5, print “Buzz”.\n",
+        "For numbers which are multiples of both 2 and 5, print “FizzBuzz”.\n",
+        "Sample input: numbers from 1 to 10 Sample output: 1 Fizz 3 Fizz Buzz\n",
+        "Fizz 7 Fizz 9 FizzBuzz"
+      ],
+      "metadata": {
+        "id": "5hJbtB7lovQP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,11):\n",
+        "  if i%2==0 and i%5==0:\n",
+        "    print(\"FizzBuzz\")\n",
+        "  elif i%2==0:\n",
+        "    print(\"Fizz\")\n",
+        "  elif i%5==0:\n",
+        "    print(\"Buzz\")\n",
+        "  else:\n",
+        "    print(i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0_F_9uevolGZ",
+        "outputId": "74ee176a-3ac5-4a78-c217-fd6c8d544fb3"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "Fizz\n",
+            "3\n",
+            "Fizz\n",
+            "Buzz\n",
+            "Fizz\n",
+            "7\n",
+            "Fizz\n",
+            "9\n",
+            "FizzBuzz\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Write a Python program to find the most frequent item in a list of\n",
+        "numbers. Sample input: 2, 3, 4, 2, 5, 2 Sample output: 2"
+      ],
+      "metadata": {
+        "id": "ryxkfg5KpqYS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "numbers = [2, 3, 4, 2, 5, 2]\n",
+        "count = Counter(numbers)\n",
+        "most_frequent = count.most_common(1)[0][0]\n",
+        "print(most_frequent)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lftNkLaupt8z",
+        "outputId": "5df0ac62-134b-4c7d-dd17-f5965de0b4c2"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. Write a Python program to find the sum of squares of the numbers in a\n",
+        "list. Sample input: 2,1,3,1 Sample output: 15"
+      ],
+      "metadata": {
+        "id": "ro3v1QJ0qQCu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [2, 1, 3, 1]\n",
+        "sum_of_squares = 0\n",
+        "for x in numbers:\n",
+        "    sum_of_squares += x**2\n",
+        "print(sum_of_squares)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A0SlaiuoqNX7",
+        "outputId": "5076d195-45a7-4788-8948-66122d4a0023"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8. Write a Python program using for loop that will iterate from 1 to 15. For\n",
+        "each iteration, check if the current number is odd or even, and display the\n",
+        "message to the screen as odd or even. Sample input: 1….15 Sample\n",
+        "output: 1-odd 2-even …. 15-odd\n"
+      ],
+      "metadata": {
+        "id": "txbQNW2arjW4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,16):\n",
+        "  if i%2==0:\n",
+        "    print(i,\"is even\")\n",
+        "  else:\n",
+        "    print(i,\"isodd\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pp_AFaR0roOp",
+        "outputId": "1f69f4c0-d396-4daa-9581-7ad680e23ef3"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 isodd\n",
+            "2 is even\n",
+            "3 isodd\n",
+            "4 is even\n",
+            "5 isodd\n",
+            "6 is even\n",
+            "7 isodd\n",
+            "8 is even\n",
+            "9 isodd\n",
+            "10 is even\n",
+            "11 isodd\n",
+            "12 is even\n",
+            "13 isodd\n",
+            "14 is even\n",
+            "15 isodd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. Write a Python program to convert temperatures to and from Celsius\n",
+        "Fahrenheit. [Formula: c/5=f-32/9 where c=temperature in Celsius and f=\n",
+        "temperature in Fahrenheit.] Sample input: Temperature in Fahrenheit\n",
+        "=41 Sample output: Temperature in Celsius =5"
+      ],
+      "metadata": {
+        "id": "tXO5lPw3r5qu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp_fahrenheit = float(input(\"Temperature in Fahrenheit = \"))\n",
+        "temp_celsius = (temp_fahrenheit - 32) * 5/9\n",
+        "print(\"Temperature in Celsius =\", int(temp_celsius))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YBnn8IX4r8zg",
+        "outputId": "861368ac-b0e4-4462-c5c5-9175dd782d44"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Temperature in Fahrenheit = 41\n",
+            "Temperature in Celsius = 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10. Write a Python function to calculate the factorial of a number (a\n",
+        "nonnegative integer). The function accepts the number as an argument.\n",
+        "Sample input: 3 Sample output: 6"
+      ],
+      "metadata": {
+        "id": "orfgmz5VtSja"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = int(input(\"Enter the number: \"))\n",
+        "fact = 1\n",
+        "for i in range(1,a+1):\n",
+        "    fact *= i\n",
+        "print(fact)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-_w6bs4YtPTc",
+        "outputId": "199136f8-ba16-463f-95ad-9eaccb2b1af0"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 5\n",
+            "120\n"
+          ]
+        }
+      ]
     }
   ]
 }
