--- a/Virtual_competition_1.ipynb
+++ b/Virtual_competition_1.ipynb
@@ -6281,10 +6281,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* Older age is moderately correlated with a higher probability of\n",
+        "diabetes\n",
+        "* A higher number of pregnancies is weakly associated with the likelihood of diabetes.\n",
+        "*  Insulin, skin thickness, and blood pressure show weaker correlations with the outcome.\n",
+        "* BMI also shows a positive correlation, suggesting that higher BMI is linked with an increased chance of diabetes.\n"
+      ],
+      "metadata": {
+        "id": "lgcTSTWr5bco"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "C7V2wz5YmRGY"
+        "id": "sfZv_33e6WH_"
       },
       "execution_count": null,
       "outputs": []
